--- a/index.html
+++ b/index.html
@@ -61,22 +61,57 @@
     <section class="special">
         <div class="container">
             <div class="special_wrap">
-                <div class="special_img"></div>
-                <h2 class="title-header">Чем мы занимаемся</h2>
+                <div class="special_img">
+                    <img src="image/pc-group.png" alt="">
+                </div>
+                <div class="special__box">
+                    <h2 class="title-header">Чем мы занимаемся</h2>
+                    <p class="special__description">Помогаем сэкономить до 40% стоимости игрового компьютера без потери производительности. Подбираем мощные детали компьютера, заказываем у своих поставщиков или напрямую у производителей, чтобы сэкономить ваши деньги. Собираем мощный компьютер, на котором можно играть в любые современные игры и заниматься работой.</p>
+                </div>
             </div>
         </div>        
     </section>   
 
     <section class="process">
         <div class="container">
-            <h2 class="title-header">Процесс работы </h2>
+            <div class="comand_box">
+                <div class="comand_img comand__img_ellips">
+                    <img src="image/Ellipse-2.png" alt="">
+                </div>
+                <h2 class="title-header">Процесс работы </h2>
+            </div>
+            <p class="process_description">Подробно рассказываем о том, как происходит сборка, от заявки до выдачи вашего заказа</p>
+            <div class="process_colums">
+                <div class="process_item">
+                    <h3 class="process_tit">Заявка</h3>
+                    <p class="process_content">Мы получаем вашу заявку, связываемся с вами для уточнения деталей, чтобы понять ваши ожидания от будущего компьютера.</p>
+                </div>
+                <div class="process_item">
+                    <h3 class="process_tit">Подбор</h3>
+                    <p class="process_content">После оплаты подбираем комплектующие, которые дадут максимальную производительность. Заказываем их напрямую у поставщиков.</p>
+                </div>
+                <div class="process_item">
+                    <h3 class="process_tit">Сборка</h3>
+                    <p class="process_content">Собираем компьютер, проводим стартовую диагностику, устанавливаем операционную систему и необходимые драйверы для работы.</p>
+                </div>
+                <div class="process_item">
+                    <h3 class="process_tit">Выдача</h3>
+                    <p class="process_content">Отдаём компьютер вам в назначенный срок, проводим вместе тестирование, подписываем документы о выполнении работы и гарантии.</p>
+                </div>            
+            </div>
         </div>
     </section> 
 
 <!-- 3 день -->
     <section class="comand">  
         <div class="container">
-            <h2 class="title-header">Наша команда</h2>
+            <div class="comand_box">
+                <div class="comand_img">
+                    <img src="image/Ellipse-2.png" alt="">
+                </div>
+                <h2 class="title-header">Наша команда</h2>
+            </div>
+
             <div class="comand__list">
                 <div class="comand__items">
                     <img  class="comand__image" src="image/face1.png" alt="">
