--- a/jo.html
+++ b/jo.html
@@ -2,7 +2,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title></head><body></body></html>
-    
+    :root { --text-size-medium;}
+    .a {
+    font-size: var(--text-size-medium;)}
+    ==
+    шаблоны надо для начала работы
+    чекбокс
+    модалка
+    мобильное меню
+    аккордион 
 html {
     font-size: 10px;
     
