--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="#comand">Команда</a>
             </nav>
             <button class="burger-btn header-burger" onclick="openModal()" type="button"></button>    
-            <button class="button header_button" type="button" >Оставить&nbsp;заявку</button>    
+            <button class="button header_button modal__button" type="button" >Оставить&nbsp;заявку</button>    
         </div>
     </header>
     
@@ -52,7 +52,7 @@
                     <div class="main-display_text">Секунд</div>
                 </div>
             </div>
-            <button class="button main_button" type="button" >Оставить&nbsp;заявку</button>    
+            <button class="button main_button modal__button" type="button" >Оставить&nbsp;заявку</button>    
             <div class="main-display_bg main-display_mobile">
                 <img src="image/main-screen.jpg" alt="">    
             </div>        
@@ -142,7 +142,7 @@
                 <h2 class="title-header">Закажите свою уникальную сборку</h2>
                 <p class="assemble-text">Мы свяжемся с вами, чтобы уточнить детали заказа</p>
                 <div class="assemble-btn">
-                    <button class="button main_button" type="button">Оставить&nbsp;заявку</button>
+                    <button class="button main_button modal__button" type="button">Оставить&nbsp;заявку</button>
                 </div>
                 <div class="assemble-social">
                     <a href="#" class="assemble-social__item vk">
@@ -163,7 +163,7 @@
     </section> 
 </main>
 <!-- mobile menu  -->
-    <div class="modal__mb" id="modal">
+    <div class="modal__mb" id="modal__mb">
         <div class="modal_window">
             <a href="#" class="logo"><img src="image/logo.svg"></a>
             <button onclick="closeModal()" class="header-modal-close">+</button>
@@ -191,7 +191,7 @@
                     <input class="modal__input" type="email" placeholder="e-mail">
                 </div>
             </div>
-            <button class="button main_button" type="submit">Отправить</button>
+            <button class="button main_button modal__button" type="submit">Отправить</button>
         </div>
     </form>
 </body>
