--- a/jo.html
+++ b/jo.html
@@ -77,7 +77,8 @@ footer 10px copy копирайт футер
   }
 
 :nth-child(odd)even {...} нечетные
-  <!-- мобильное меню 1-1 -->
+
+<!-- мобильное меню 1-1 модалка -->
 
 <form action="#" class="modal block_center" >
     <div class="modal__inner">
@@ -171,3 +172,5 @@ modalClose.addEventListener('click', () => {
 	modalWindow.style.display = 'none';
 	body.classList.remove('noscroll');
 })
+
+https://nexoos.ru/moduli/podgruzka-tovarov-po-knopke.html
