--- a/index.html
+++ b/index.html
@@ -33,26 +33,29 @@
     
     <main class="main">
         <section class="main-display">
-            <h1 class="title">Собираем игровой ПК под ваш бюджет</h1>
-            <div class="main-display_timer timer__block">
-                <div class="main-display_item">
-                    <div class="main-display_count">19</div>
-                    <div class="main-display_text">Дней</div>
+            <div class="main-box">
+                <h1 class="title">Собираем игровой ПК под ваш бюджет</h1>
+                <div class="main-display_timer timer__block">
+                    <div class="main-display_item">
+                        <div class="main-display_count">19</div>
+                        <div class="main-display_text">Дней</div>
+                    </div>
+                    <div class="main-display_item">
+                        <div class="main-display_count">19</div>
+                        <div class="main-display_text">Часов</div>
+                    </div>
+                    <div class="main-display_item">
+                        <div class="main-display_count">19</div>
+                        <div class="main-display_text">Минут</div>
+                    </div>
+                    <div class="main-display_item">
+                        <div class="main-display_count">18</div>
+                        <div class="main-display_text">Секунд</div>
+                    </div>
                 </div>
-                <div class="main-display_item">
-                    <div class="main-display_count">19</div>
-                    <div class="main-display_text">Часов</div>
-                </div>
-                <div class="main-display_item">
-                    <div class="main-display_count">19</div>
-                    <div class="main-display_text">Минут</div>
-                </div>
-                <div class="main-display_item">
-                    <div class="main-display_count">18</div>
-                    <div class="main-display_text">Секунд</div>
-                </div>
+                <button class="button main_button modal__button" type="button" >Оставить&nbsp;заявку</button>    
             </div>
-            <button class="button main_button modal__button" type="button" >Оставить&nbsp;заявку</button>    
+               
             <div class="main-display_bg main-display_mobile">
                 <img src="image/main-screen.jpg" alt="">    
             </div>        
