--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    
+    <link rel="android-chrome-icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">    
+    <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-touch-icon.png">    
+    <link rel="android-chrome-icon" type="image/png" sizes="152x152" href="image/favicon/android-chrome-512x512.png">
+    <link rel="android-chrome-icon" type="image/png" sizes="150x150" href="image/favicon/mstile-150x150.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
+    <link rel="manifest" href="image/favicon/site.webmanifest">
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="Roboto/stylesheet.css">
     <link rel="stylesheet" href="style/style.css">
